chore: prepare demo for kaufland PL

--- a/src/app/pages/scan/scan.page.html
+++ b/src/app/pages/scan/scan.page.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <h1>LEI {{ getTotal().toFixed(2) }}</h1>
+                <h1>PLN {{ getTotal().toFixed(2) }}</h1>
 
             </div>
 
