--- a/src/app/pages/voucher-details/voucher-details.page.html
+++ b/src/app/pages/voucher-details/voucher-details.page.html
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <h1>LEI {{ currentVoucher.Value.toFixed(2) }}</h1>
+                <h1>PLN {{ currentVoucher.Value.toFixed(2) }}</h1>
 
 
             </div>
