--- a/src/app/pages/voucher-history/voucher-history.page.html
+++ b/src/app/pages/voucher-history/voucher-history.page.html
@@ -34,7 +34,7 @@
                                 <ion-badge [color]="getVoucherStateColor(voucher.State)">
                                     {{ getVoucherStateText(voucher.State) | translate }}
                                 </ion-badge>
-                                <p>LEI {{ voucher.Value.toFixed(2) }} </p>
+                                <p>PLN {{ voucher.Value.toFixed(2) }} </p>
                             </div>
                         </ion-item>
                         <ion-item-options slot="end">
