--- a/src/app/pages/reset-password/reset-password.page.scss
+++ b/src/app/pages/reset-password/reset-password.page.scss
@@ -91,16 +91,15 @@ ion-content {
             width: 100%;
 
             ion-button {
-                min-height: 50px;
-                text-transform: uppercase;
+                min-height: 60px;
                 margin: 0;
-
                 color: #222428;
-                font-size: 18px;
+                font-size: 22px;
                 font-style: normal;
+                letter-spacing: -0.4px;
+                text-transform: capitalize;
                 font-weight: 500;
                 line-height: normal;
-                letter-spacing: -0.5px;
             }
         }
     }
