--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -21,20 +21,22 @@
             h1 {
                 margin: 0;
                 font-size: 24px;
-                font-weight: 500;
+                font-weight: 600;
+                text-align: center;
             }
 
             p {
                 margin: 0;
-                font-size: 20px;
-                font-weight: 300;
+                font-size: 16px;
+                font-weight: 200;
+                text-align: center;
             }
         }
 
         .welcome__permission {
             p {
                 margin: 0;
-                font-size: 18px;
+                font-size: 20px;
                 font-weight: 300;
             }
         }
